Générateur de random en python